# df-file-manager

./: Makefile  README.md  pyproject.toml
cfg/: api_log.ini  config_dev.yaml
data/in/: acct_positions_20241129.csv  acct_positions_20241224.csv  acct_positions_20241226.recon  assets_20241226.csv  customers_20241226.csv
src/fm_app/: fm_app_api.py  fm_app_core.py  fm_app_ui.py  fm_app_ui_script.py
